Rendering fix for dialogs with uneven width

--- a/wcfsetup/install/files/style/ui/dialog.scss
+++ b/wcfsetup/install/files/style/ui/dialog.scss
@@ -51,7 +51,6 @@
 	min-width: 400px;
 	position: absolute;
 	transform: translateX(-50%);
-	will-change: transform;
 	z-index: 200;
 	
 	&[aria-hidden=false] {
